clusters/homelab/apps/docs/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: docs
  labels:
    gateway.infra.services/allow-routes: "true"
