clusters/homelab/apps/docs/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docs
  namespace: docs
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: main
  hostnames:
    - "docs.klimlive.de"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: backend
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /admin
      backendRefs:
        - name: backend
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /collaboration/ws
      backendRefs:
        - name: y-provider
          port: 4444
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 8080
